# ouroboros-introspector

./: .gitignore  CMakeLists.txt  Introspector.cpp  Opwig.cpp  PrepareRunTest.cmake  README.md  run-test.py  run-test.py.in
test-inputs/: simple-class.hh
test-outputs/: simple-class.hh.json
